@@ -1,8 +1,8 @@
 plugins {
-    id("org.springframework.boot") version "3.0.0-RC2"
-    id("io.spring.dependency-management") version "1.1.0"
-    kotlin("jvm") version "1.7.20"
-    kotlin("plugin.spring") version "1.7.20"
+    id("org.springframework.boot") version "3.2.0-RC2"
+    id("io.spring.dependency-management") version "1.1.4"
+    kotlin("jvm") version "1.9.20"
+    kotlin("plugin.spring") version "1.9.20"
 }
 
 version = "0.0.1-SNAPSHOT"
@@ -17,9 +17,9 @@ dependencies {
     implementation("com.fasterxml.jackson.module:jackson-module-kotlin")
     implementation("org.jetbrains.kotlin:kotlin-reflect")
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
-    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4")
-    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-reactor:1.6.4")
-    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-jdk8:1.6.4")
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.3")
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-reactor:1.7.3")
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-jdk8:1.7.3")
 
     // integration with grafana
     implementation("io.micrometer:micrometer-registry-prometheus")
@@ -30,34 +30,33 @@ dependencies {
 
 kotlin {
     jvmToolchain {
-        languageVersion.set(JavaLanguageVersion.of(19))
+        languageVersion.set(JavaLanguageVersion.of(21))
     }
 }
 
 java {
     toolchain {
-        languageVersion.set(JavaLanguageVersion.of(19))
+        languageVersion.set(JavaLanguageVersion.of(21))
     }
 }
 
 tasks.withType<org.jetbrains.kotlin.gradle.tasks.KotlinCompile> {
     kotlinOptions {
         freeCompilerArgs = listOf("-Xjsr305=strict")
-        jvmTarget = "17"
+        jvmTarget = "21"
     }
 }
 
 tasks.withType<JavaCompile> {
     options.compilerArgs.add("--enable-preview")
-    options.compilerArgs.add("--add-modules=jdk.incubator.concurrent")
-    options.release.set(19)
+    options.release.set(21)
 }
 
 tasks.withType<JavaExec> {
-    environment("JAVA_TOOL_OPTIONS", "--enable-preview --add-modules=jdk.incubator.concurrent")
+    environment("JAVA_TOOL_OPTIONS", "--enable-preview")
 }
 
 tasks.withType<Test> {
     useJUnitPlatform()
-    jvmArgs = listOf("--enable-preview", "--add-modules=jdk.incubator.concurrent")
+    jvmArgs = listOf("--enable-preview")
 }
